--- a/Robot/platformio.ini
+++ b/Robot/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = upesy_wroom
 framework = arduino
+monitor_speed = 115200
+lib_deps =
+  adafruit/Adafruit MPU6050@^2.0.0
+  adafruit/Adafruit Unified Sensor 
